# lagana-coach-api

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_courts.py  0003_coach_clubs_lesson_courts.py
app/: main.py
app/api/v1/: dependencies.py  router.py
app/api/v1/routers/: auth.py  clubs.py  coaches.py  invoices.py  lessons.py  players.py  strokes.py
app/core/: config.py  security.py
app/db/: base_class.py  session.py
app/models/: __init__.py  associations.py  club.py  coach.py  court.py  enums.py  invoice.py  invoice_item.py  lesson.py  password_reset_token.py  player.py  stroke.py  user.py
app/schemas/: __init__.py  auth.py  club.py  coach.py  common.py  court.py  invoice.py  lesson.py  player.py  stroke.py  user.py
app/services/: auth.py  email.py  invoice.py
app/templates/email/: password_reset.html
app/utils/: time.py
db/: schema.sql
scripts/: export_schema.sh
storage/invoices/: invoice-1.csv  invoice-2.csv
tests/: conftest.py  test_auth.py  test_invoices.py  test_lessons.py  test_scope.py
